--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<java.version>17</java.version>
 		<!-- add h2 data base version information -->
 		<h2.version>1.4.196</h2.version>
+<!--		<h2.version>2.1.210</h2.version>-->
 	</properties>
 	<dependencies>
 
@@ -31,6 +32,12 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+
+		<!--	JPA starter 의존성 추가	-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
 		<dependency>
